- Resized Valorant & SSB game-title to fix gaps at the bottom. - Fixed bug where checkUsernameStatus would never display a result due to inverse in special character validation logic.

--- a/app/components/game-card-grid/components/game-card/games/SSB.css
+++ b/app/components/game-card-grid/components/game-card/games/SSB.css
@@ -81,7 +81,7 @@
 @media (min-width: 1024px) {
     #ssb .game-title {
         font-size: 1.25em;
-        padding: 21px;
+        padding: 21.5px;
     }
 }
 
